feat: update migrations and readme

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2022-latest
     container_name: sqlserver
+    restart: alwaysAdd-Migration InitDB
     environment:
       - ACCEPT_EULA=Y
       - SA_PASSWORD=Admin123@
@@ -20,10 +21,9 @@
       - |
         /opt/mssql/bin/sqlservr &
 
-        echo "⏳ Esperando que SQL Server inicie..."
-        sleep 20
+        echo "Hidratando SQL"
 
-        echo "⚙️ Instalando herramientas mssql-tools..."
+        echo "Instalando mssql"
         apt-get update -y
         apt-get install -y curl apt-transport-https gnupg
         curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
@@ -32,7 +32,6 @@
         ACCEPT_EULA=Y apt-get install -y mssql-tools unixodbc-dev
 
         echo "✅ mssql-tools instalado."
-        sleep 5
 
         /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P Admin123@ -Q "CREATE DATABASE BD_SOA; ALTER DATABASE BD_SOA SET RECOVERY SIMPLE;"
         echo "✅ Base de datos BD_SOA creada."
